# ABx

./: .clang-format  .clocignore  .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  Editor.bat  INSTALL.md  LICENSE  MATH.md  README.md  TODO.md  TODO.txt  azure-pipelines.yml  cloc.bat  cloc.sh  premake5.lua  run  run.bat  stop  stop.bat
Tests/: CMakeLists.txt  Makefile  README.md  Tests.cbp  Tests.config  Tests.files  Tests.includes  Tests.project  Tests.sln
Tests/Tests/: AI.Loader.cpp  AI.Mockup.cpp  AI.Mockup.h  AI.Parallel.cpp  AI.Sequence.cpp  AI.Zone.cpp  IPC.Mesagge.cpp  Math.BoundingBox.cpp  Math.Collisions.cpp  Math.Hull.cpp  Math.Matrix.cpp  Math.Quaternion.cpp  Math.Ray.cpp  Math.Shape.cpp  Math.Sphere.cpp  Math.Transformation.cpp  Math.Utils.cpp  Math.Vector3.cpp  Math.VectorMath.cpp  Net.MessageMsg.cpp  Tests.cpp  Tests.h  Tests.vcxproj  Tests.vcxproj.filters  TinyExpr.cpp  Utils.CallableTable.cpp  Utils.Events.cpp  Utils.Transaction.cpp  Utils.Utf8.cpp  Utils.WeightedSelector.cpp  main.cpp  sa.ArgParser.cpp  sa.Bits.cpp  sa.PatternMatch.cpp  sa.PoolAllocator.cpp  sa.Result.cpp  sa.SharedPtr.cpp  sa.StringTempl.cpp  sa.TypeName.cpp  stdafx.h  (+1 more)
abbots/: CMakeLists.txt  README.md  abbots.sln
abbots/abbots/: Application.cpp  Application.h  BotClient.cpp  BotClient.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  ScriptHelper.cpp  ScriptHelper.h  Version.h  abbots.vcxproj  abbots.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
abclient/: CMakeLists.txt  Makefile  README.md  abclient.cbp  abclient.files  abclient.includes  abclient.project  abclient.sln  abclient.workspace  abclient_codelite.workspace
abclient/Setup/: compress.bat  config.xml  createpak.bat  fwclient.iss  makecert.bat  mcert.bat  signcode.bat
abclient/abclient/: AbEvents.h  AccountChestDialog.cpp  AccountChestDialog.h  Actor.cpp  Actor.h  ActorResourceBar.cpp  ActorResourceBar.h  AddAccountKeyDialog.cpp  AddAccountKeyDialog.h  AntiRE.h  AudioManager.cpp  AudioManager.h  BaseLevel.cpp  BaseLevel.h  CameraTransform.cpp  CameraTransform.h  CharCreateLevel.cpp  CharCreateLevel.h  CharSelectLevel.cpp  CharSelectLevel.h  ChatFilter.cpp  ChatFilter.h  ChatWindow.cpp  ChatWindow.h  ClientApp.cpp  ClientApp.h  ClientPrediction.cpp  ClientPrediction.h  ComplexFFT.cpp  ComplexFFT.h  Config.h  ConfirmDeleteCharacter.cpp  ConfirmDeleteCharacter.h  Conversions.cpp  Conversions.h  CraftsmanDialog.cpp  CraftsmanDialog.h  CraftsmanWindow.cpp  CraftsmanWindow.h  CreateAccountLevel.cpp  (+137 more)
abdata/: CMakeLists.txt  Makefile  README.md  abdata.cbp  abdata.config  abdata.files  abdata.includes  abdata.project  abdata.sln  abdata_codelite.workspace
abdata/abdata/: Account.h  AppService.cpp  AppService.h  Application.cpp  Application.h  CacheIndex.cpp  CacheIndex.h  ConfigManager.cpp  ConfigManager.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  DBAccount.cpp  DBAccount.h  DBAccountBan.cpp  DBAccountBan.h  DBAccountBanList.cpp  DBAccountBanList.h  DBAccountItemList.cpp  DBAccountItemList.h  DBAccountKey.cpp  DBAccountKey.h  DBAccountKeyAccounts.cpp  DBAccountKeyAccounts.h  DBAccountKeyList.cpp  DBAccountKeyList.h  DBAccountList.cpp  DBAccountList.h  DBAll.h  DBAttribute.cpp  DBAttribute.h  DBAttributeList.cpp  DBAttributeList.h  DBBan.cpp  DBBan.h  DBCharacter.cpp  DBCharacter.h  DBCharacterList.cpp  DBCharacterList.h  (+124 more)
abdb/: CMakeLists.txt  Makefile  abdb.cbp  abdb.config  abdb.files  abdb.includes  abdb.project  abdb.sln  abdb_codelite.workspace
abdb/abdb/: Database.cpp  Database.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabaseOdbc.cpp  DatabaseOdbc.h  DatabasePgsql.cpp  DatabasePgsql.h  DatabaseSqlite.cpp  DatabaseSqlite.h  abdb.vcxproj  abdb.vcxproj.filters  stdafx.cpp  stdafx.h
abfile/: CMakeLists.txt  Makefile  abfile.cbp  abfile.files  abfile.includes  abfile.project  abfile.sln
abfile/abfile/: Application.cpp  Application.h  Servers.h  Version.h  abfile.cbp  abfile.vcxproj  abfile.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h
ablb/: CMakeLists.txt  Makefile  ablb.files  ablb.includes  ablb.project  ablb.sln
ablb/ablb/: Acceptor.cpp  Acceptor.h  Application.cpp  Application.h  Bridge.cpp  (+8 more)
ablogin/: CMakeLists.txt  Makefile  ablogin.cbp  ablogin.config  ablogin.files  ablogin.includes  ablogin.project  ablogin.sln
abmatch/: CMakeLists.txt  Makefile  README.md  abmatch.config  abmatch.files  abmatch.includes  abmatch.sln
abmsgs/: CMakeLists.txt  Makefile  README.md  abmsgs.cbp  abmsgs.files  abmsgs.includes  abmsgs.project  abmsgs.sln
absadmin/: CMakeLists.txt  Makefile  absadmin.cbp  absadmin.config  absadmin.files  absadmin.includes  absadmin.project  absadmin.sln
abscommon/: CMakeLists.txt  Makefile  README.md  abscommon.cbp  abscommon.config  abscommon.files  abscommon.includes  abscommon.project  abscommon.sln  abscommon_codelite.workspace
abserv/: CMakeLists.txt  Makefile  README.md  abserv.cbp  abserv.config  abserv.cxxflags  abserv.files  abserv.includes  abserv.project  abserv.sln
abshared/: CMakeLists.txt  README.md  abshared.files  abshared.includes  abshared.sln
absmath/: CMakeLists.txt  Makefile  README.md  absmath.cbp  absmath.config  absmath.files  absmath.includes  absmath.project  absmath.sln
absync/: CMakeLists.txt  README.md  absync.sln
abtests/: CMakeLists.txt  README.md  Tests.sln  abtests.files  abtests.includes  abtests.sln
dbgclient/: CMakeLists.txt  README.md  dbgclient.config  dbgclient.files  dbgclient.includes  dbgclient.sln
dbtool/: CMakeLists.txt  README.md  dbtool.config  dbtool.files  dbtool.includes  dbtool.sln
genavmesh/: CMakeLists.txt  README.md  genavmesh.files  genavmesh.includes  genavmesh.sln
import/: CMakeLists.txt  README.md  import.files  import.includes  import.sln
keygen/: CMakeLists.txt  README.md  keygen.cbp  keygen.config  keygen.files  keygen.includes  keygen.project  keygen.sln
libabclient/: CMakeLists.txt  Makefile  README.md  libabclient.cbp  libabclient.config  libabclient.files  libabclient.includes  libabclient.project  libabclient.sln
(+1690 files in other folders)
